deploy: 0885a0ad32a69aafb97841b9404b0544efcd314f

--- a/installation/ly_server/index.html
+++ b/installation/ly_server/index.html
@@ -380,8 +380,8 @@ COMPILE
 </li></ul></li></ul></nav></div></div></article><div class="w-100 bg-light-gray">
 <div class="mw7 pa4 center nested-lh-copy lh-copy">
 <h6 class="f6 dark-gray mb2">
-Last updated: January 7, 2023: <a class="hide-child link primary-color" href=https://github.com/Abyssal-Fish-Technology/ly_docs/commit/169ab8209f8669c9c099b99b25f900aa8362e6a9>init (169ab82)</a>
-</h6><a href=https://github.com/Abyssal-Fish-Technology/ly_docs/edit/master/content/installation/ly_server.md class="f6 ph3 pv1 br2 dib tc ttu mv3 bg-primary-color white hover-bg-green link">Improve this page</a>
+Last updated: January 7, 2023: <a class="hide-child link primary-color" href=#ZgotmplZcommit/169ab8209f8669c9c099b99b25f900aa8362e6a9>init (169ab82)</a>
+</h6><a href=#ZgotmplZedit/master/content/installation/ly_server.md class="f6 ph3 pv1 br2 dib tc ttu mv3 bg-primary-color white hover-bg-green link">Improve this page</a>
 </div></div></main><footer class="bg-primary-color-dark ph4-ns pt4 relative w-100" role=contentinfo>
 <div class="center flex-ns flex-wrap justify-between mw9 w-90">
 <div class="center pb3 pt4">
