--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Chat With Gitter Community<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="h
 <p class=f4>FlowShadow is Open-Source and Completely Free</p><p class=f4>Use it, Give Feedbacks and Make Contributions.</p></div></div><div class="w-100 tc w-third-l">
 <h3 class="f3 mv3 accent-color-light">More Ways to Contribute</h3><ul class="list ma0 pa0">
 <li class="mb3 f4">
-<a href=https://github.com/Abyssal-Fish-Technology/ly_docs class="link mid-gray dim">
+<a href=https://github.com/abyssalfish-os/abyssalfish-os.github.io class="link mid-gray dim">
 Improve the Docs<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="14" viewBox="0 0 32 32" class="fill-current v-base" aria-label="External Link"><path d="M25.152 16.576v5.696q0 2.144-1.504 3.648T20 27.424H5.152q-2.144.0-3.648-1.504t-1.504-3.648V7.424q0-2.112 1.504-3.616t3.648-1.536h12.576q.224.0.384.16t.16.416V4q0 .256-.16.416t-.384.16H5.152q-1.184.0-2.016.832t-.864 2.016v14.848q0 1.184.864 2.016t2.016.864H20q1.184.0 2.016-.864t.832-2.016v-5.696q0-.256.16-.416t.416-.16h1.152q.256.0.416.16t.16.416zM32 1.152v9.12q0 .48-.352.8t-.8.352-.8-.352l-3.136-3.136-11.648 11.648q-.16.192-.416.192t-.384-.192l-2.048-2.048q-.192-.16-.192-.384t.192-.416L24.064 5.088l-3.136-3.136q-.352-.352-.352-.8t.352-.8.8-.352h9.12q.48.0.8.352t.352.8z"/></svg>
 </a>
 </li><li class="mb3 f4">
