--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ production">
 文档
 </a>
 </li><li class="f5 dib mr4" role=menuitem>
+<a href=/downloads/ class="dim link light-silver">
+下载
+</a>
+</li><li class="f5 dib mr4" role=menuitem>
 <a href=/demo/ class="dim link light-silver">
 Demo演示
 </a>
@@ -182,6 +186,10 @@ Improve the Modules<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://w
 </li><li class="tl dib ma0 hover-bg-black w-100">
 <a href=/documentation/ class="ttu f6 link primary-color-light overflow hover-white db brand-font ma0 w-100 pv3 ph4">
 文档
+</a>
+</li><li class="tl dib ma0 hover-bg-black w-100">
+<a href=/downloads/ class="ttu f6 link primary-color-light overflow hover-white db brand-font ma0 w-100 pv3 ph4">
+下载
 </a>
 </li><li class="tl dib ma0 hover-bg-black w-100">
 <a href=/demo/ class="ttu f6 link primary-color-light overflow hover-white db brand-font ma0 w-100 pv3 ph4">
