--- a/404.html
+++ b/404.html
@@ -138,6 +138,10 @@ GitHub
 用户手册
 </a>
 </li><li class="tl dib ma0 hover-bg-black w-100">
+<a href=/other/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
+其它资料
+</a>
+</li><li class="tl dib ma0 hover-bg-black w-100">
 <a href=/demo/ class="ttu f6 link primary-color-light hover-white db brand-font mb1 ma0 w-100 pv2 ph4">
 演示Demo
 </a>
