deploy: 215258486431f065f151a9c0ab0c75c00cf07f59

--- a/getting-started/deploy-required/index.html
+++ b/getting-started/deploy-required/index.html
@@ -136,7 +136,7 @@ FUNDAMENTALS
 <td></td><td></td><td>TCP/10081</td><td>Server-Agent通讯</td></tr><tr>
 <td>管理控制</td><td>eth0/内网IP</td><td>TCP/22</td><td>SSH服务</td></tr><tr>
 <td></td><td></td><td>TCP/18080</td><td>WebUI及API通信</td></tr></tbody></table><p>*保证管理控制服务器到采集分析服务器的10081端口TCP协议路由可达。</p><p>*保证用户浏览器终端到管理控制服务器的18080端口TCP协议路由可达。</p></div><h2>See Also</h2><ul>
-<li><a href=/other/development/>ESXi环境流量镜像接入说明</a></li></ul></div></div><div class="order-0 w-20 dn db-l">
+<li><a href=/other/faq/>常见问题</a></li><li><a href=/other/development/>ESXi环境流量镜像接入说明</a></li></ul></div></div><div class="order-0 w-20 dn db-l">
 <nav role=navigation>
 <ul class="list pa0 nl2">
 <li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
@@ -245,6 +245,10 @@ FUNDAMENTALS
 </li><li class="f6 fw4">
 <a href=/other/development/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
 流量镜像接入
+</a>
+</li><li class="f6 fw4">
+<a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
+常见问题
 </a>
 </li></ul></li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
 <a href=/demo/ class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.demo>演示Demo</a>
