--- a/contribute/development/index.html
+++ b/contribute/development/index.html
@@ -115,7 +115,7 @@ CONTRIBUTE
 <li><a href=https://github.com/Abyssal-Fish-Technology/ly_probe>Github: ly_probe</a></li><li><a href=https://gitee.com/abyssalfish-os/ly_probe>Gitee: ly_probe</a></li></ul><h3 id=发起issue-3>发起issue <a class=header-link href=#%e5%8f%91%e8%b5%b7issue-3><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h3><p>浏览、发起issue：</p><ul>
 <li><a href=https://github.com/Abyssal-Fish-Technology/ly_probe/issues>Github: ly_probe</a></li><li><a href=https://gitee.com/abyssalfish-os/ly_probe/issues>Gitee: ly_probe</a></li></ul><h2 id=联系方式>联系方式 <a class=header-link href=#%e8%81%94%e7%b3%bb%e6%96%b9%e5%bc%8f><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h2><ul>
 <li>联系邮箱：<a href=mailto:opensource@abyssalfish.com.cn>opensource@abyssalfish.com.cn</a></li><li>线上讨论区：<a href="https://gitter.im/abyssalfish-os/community?utm_source=share-link&utm_medium=link&utm_campaign=share-link">去Gitter沟通群</a></li></ul></div><h2>See Also</h2><ul>
-<li><a href=/contribute/documentation/>帮助完善项目文档 Docs</a></li><li><a href=/other/development/>ESXi环境流量镜像接入说明</a></li></ul></div></div><div class="order-0 w-20 dn db-l">
+<li><a href=/contribute/documentation/>帮助完善项目文档 Docs</a></li><li><a href=/other/faq/>常见问题</a></li><li><a href=/other/development/>ESXi环境流量镜像接入说明</a></li></ul></div></div><div class="order-0 w-20 dn db-l">
 <nav role=navigation>
 <ul class="list pa0 nl2">
 <li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
@@ -224,6 +224,10 @@ CONTRIBUTE
 </li><li class="f6 fw4">
 <a href=/other/development/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
 流量镜像接入
+</a>
+</li><li class="f6 fw4">
+<a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
+常见问题
 </a>
 </li></ul></li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
 <a href=/demo/ class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.demo>演示Demo</a>
