deploy: 1246f6b058dcd747842762f12af20cd0843a5e9c

--- a/getting-started/usage/index.html
+++ b/getting-started/usage/index.html
@@ -233,7 +233,7 @@ FUNDAMENTALS
 </a>
 </li><li class="f6 fw4">
 <a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
-常见问题
+常见问题QA
 </a>
 </li></ul></li><li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
 <a href=/demo/ class="js-toggle dib w-100 link mid-gray hover-accent-color-light pl2 pr2 pv2" data-target=.demo>演示Demo</a>
