deploy: 3de77da67c4c85fe3f14095e6d2adddd3dccb115

--- a/about/license/index.html
+++ b/about/license/index.html
@@ -114,7 +114,7 @@ GitHub
 <aside class="admonition note">
 <div class=note-icon>
 </div><div class=admonition-content><ul>
-<li>探针模块ly_probe源自于nprobe早期开源5.x版本，遵循GNU GPLv3 协议</li><li>分析检测模块ly_analyser使用了nfdump，其中nfdump相关部分遵循协议 BSD license</li></ul></div></aside><p><em>Version 3, 29 June 2007</em>
+<li>探针模块ly_probe源自于nprobe早期开源5.x版本，遵循GNU GPLv3 协议</li><li>分析检测模块ly_analyser使用了nfdump，其中nfdump相关部分遵循协议 BSD license</li></ul></div></aside><p><em>Version 3, 29 June 2007</em> <br>
 <a href=https://www.gnu.org/licenses/gpl-3.0.txt>https://www.gnu.org/licenses/gpl-3.0.txt</a></p><h2 id=gnu-general-public-license>GNU GENERAL PUBLIC LICENSE <a class=header-link href=#gnu-general-public-license><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h2><p>Version 3, 29 June 2007</p><p>Copyright (C) 2007 Free Software Foundation, Inc. <a href=http://fsf.org/>http://fsf.org/</a>
 Everyone is permitted to copy and distribute verbatim copies
 of this license document, but changing it is not allowed.</p><h2 id=preamble>Preamble <a class=header-link href=#preamble><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h2><p>The GNU General Public License is a free, copyleft license for
@@ -524,7 +524,7 @@ free software which everyone can redistribute and change under these terms.</p><
 to attach them to the start of each source file to most effectively
 state the exclusion of warranty; and each file should have at least
 the &ldquo;copyright&rdquo; line and a pointer to where the full notice is found.</p><p>&lt;one line to give the program&rsquo;s name and a brief idea of what it does.>
-Copyright (C) </p><p>This program is free software: you can redistribute it and/or modify
+Copyright (C) <year> <name of author></p><p>This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.</p><p>This program is distributed in the hope that it will be useful,
@@ -532,7 +532,7 @@ but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.</p><p>You should have received a copy of the GNU General Public License
 along with this program. If not, see <a href=http://www.gnu.org/licenses/>http://www.gnu.org/licenses/</a>.</p><p>Also add information on how to contact you by electronic and paper mail.</p><p>If the program does terminal interaction, make it output a short
-notice like this when it starts in an interactive mode:</p><p> Copyright (C)
+notice like this when it starts in an interactive mode:</p><p><program> Copyright (C) <year> <name of author>
 This program comes with ABSOLUTELY NO WARRANTY; for details type <code>show w'. This is free software, and you are welcome to redistribute it under certain conditions; type </code>show c&rsquo; for details.</p><p>The hypothetical commands <code>show w' and </code>show c&rsquo; should show the appropriate
 parts of the General Public License. Of course, your program&rsquo;s commands
 might be different; for a GUI interface, you would use an &ldquo;about box&rdquo;.</p><p>You should also get your employer (if you work as a programmer) or school,
@@ -652,6 +652,10 @@ Public License instead of this License. But first, please read
 </li><li class="f6 fw4">
 <a href=/other/development/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
 流量镜像接入
+</a>
+</li><li class="f6 fw4">
+<a href=/other/qalist/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
+功能支持说明
 </a>
 </li><li class="f6 fw4">
 <a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
