--- a/contribute/documentation/index.html
+++ b/contribute/documentation/index.html
@@ -116,7 +116,7 @@ CONTRIBUTE
 </span></span></code></pre></div><h2 id=文档改善>文档改善 <a class=header-link href=#%e6%96%87%e6%a1%a3%e6%94%b9%e5%96%84><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h2><p>流影文档使用 <a href=https://github.com/gohugoio/hugoDocs>hugoDocs</a> 样式，使用Hugo生成项目文档，具体信息请参考其使用文档。</p><h3 id=创建文档新内容>创建文档新内容 <a class=header-link href=#%e5%88%9b%e5%bb%ba%e6%96%87%e6%a1%a3%e6%96%b0%e5%86%85%e5%ae%b9><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h3><div class=highlight><pre tabindex=0 class=chroma><code class=language-txt data-lang=txt><span class=line><span class=cl>hugo new &lt;DOCS-SECTION&gt;/&lt;new-content&gt;.md
 </span></span></code></pre></div><h3 id=编辑文档>编辑文档 <a class=header-link href=#%e7%bc%96%e8%be%91%e6%96%87%e6%a1%a3><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h3><p>在<code>content</code>目录下找到对需要改善的文档md，修改内容即可。</p><h2 id=反馈方式>反馈方式 <a class=header-link href=#%e5%8f%8d%e9%a6%88%e6%96%b9%e5%bc%8f><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h2><ul>
 <li>联系邮箱：<a href=mailto:opensource@abyssalfish.com.cn>opensource@abyssalfish.com.cn</a></li><li>线上讨论区：<a href="https://gitter.im/abyssalfish-os/community?utm_source=share-link&utm_medium=link&utm_campaign=share-link">去Gitter沟通群</a></li></ul></div><h2>See Also</h2><ul>
-<li><a href=/contribute/development/>代码贡献</a></li><li><a href=/other/faq/>常见问题</a></li><li><a href=/other/development/>ESXi环境流量镜像接入说明</a></li></ul></div></div><div class="order-0 w-20 dn db-l">
+<li><a href=/contribute/development/>代码贡献</a></li><li><a href=/other/qalist/>功能列表</a></li><li><a href=/other/faq/>常见问题</a></li><li><a href=/other/development/>ESXi环境流量镜像接入说明</a></li></ul></div></div><div class="order-0 w-20 dn db-l">
 <nav role=navigation>
 <ul class="list pa0 nl2">
 <li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
@@ -225,6 +225,10 @@ CONTRIBUTE
 </li><li class="f6 fw4">
 <a href=/other/development/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
 流量镜像接入
+</a>
+</li><li class="f6 fw4">
+<a href=/other/qalist/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
+功能支持说明
 </a>
 </li><li class="f6 fw4">
 <a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
