--- a/getting-started/quick-start/index.html
+++ b/getting-started/quick-start/index.html
@@ -434,6 +434,10 @@ firewall-cmd --reload
 流量镜像接入
 </a>
 </li><li class="f6 fw4">
+<a href=/other/qalist/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
+功能支持说明
+</a>
+</li><li class="f6 fw4">
 <a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
 常见问题QA
 </a>
