--- a/installation/ly_analyser/index.html
+++ b/installation/ly_analyser/index.html
@@ -362,6 +362,10 @@ tensorflow-2.0.4、</dd></dl><h2 id=安装依赖环境>安装依赖环境 <a cla
 流量镜像接入
 </a>
 </li><li class="f6 fw4">
+<a href=/other/qalist/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
+功能支持说明
+</a>
+</li><li class="f6 fw4">
 <a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
 常见问题QA
 </a>
