--- a/other/faq/index.html
+++ b/other/faq/index.html
@@ -100,6 +100,8 @@ GitHub
 <li><a href=#q-支持哪些部署方式>Q: 支持哪些部署方式?</a></li><li><a href=#q-各类型功能节点部署方式>Q: 各类型功能节点部署方式?</a></li><li><a href=#q-如何测试流量数据包>Q: 如何测试流量数据包?</a></li><li><a href=#q-如何测试系统数据流转正常>Q: 如何测试系统数据流转正常?</a></li><li><a href=#q-安装部署后发现数据写入失败的问题>Q: 安装部署后，发现数据写入失败的问题。</a></li><li><a href=#q-如何配置两个探针>Q: 如何配置两个探针？</a></li><li><a href=#q-流影安装和使用中是否需要联网>Q: 流影安装和使用中是否需要联网？</a></li><li><a href=#q-威胁情报ioc检测配置文件位置>Q: 威胁情报IOC检测配置文件位置？</a></li></ul></nav><div date-pref>
 <a href=https://abyssalfish-os.github.io/other/development/ class="dib f6 pl1 hover-bg-light-gray br-100" title="ESXi环境流量镜像接入说明 "><svg class="fill-current" height="30" viewBox="0 0 24 24" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
 </a>
+<a href=https://abyssalfish-os.github.io/other/qalist/ class="dib f6 pr1 hover-bg-light-gray br-100" title=功能列表><svg class="fill-current" height="30" viewBox="0 0 24 24" width="30" xmlns="http://www.w3.org/2000/svg"><path d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+</a>
 </div></aside></div><div class="order-1 w-60-l mw7 ph0 ph5-ns mid-gray nested-copy-line-height no-underline nested-links nested-img nested-copy-seperator nested-blockquote mt0-ns" style=flex-grow:1>
 <div class="documentation-copy center measure-wide-wd">
 <div id=readout class="fixed right-0 bottom-0">
@@ -126,7 +128,7 @@ DEPLOY
 <li>采集器nfcap启动时，<code>-p</code>参数指定监听的端口，<code>-l</code>指定接收到的数据存储的位置。第二个采集器调整为类似<code>/Agent/bin/nfcapd -w -D -l /data/flow/5 -p 9996</code></li><li>探针中参数，<code>-i</code>指定网卡，<code>-n</code>指定数据发向的位置。第二个探针参数修改-n类似为<code>-n 127.0.0.1:9996</code>,对应接收器的端口。</li><li>登录系统界面，在菜单“配置”-“系统”-“数据节点”下，默认存在两个数据节点配置，只需修改第二条配置“禁止使用”即可。</li></ol><h2 id=q-流影安装和使用中是否需要联网>Q: 流影安装和使用中是否需要联网？ <a class=header-link href=#q-%e6%b5%81%e5%bd%b1%e5%ae%89%e8%a3%85%e5%92%8c%e4%bd%bf%e7%94%a8%e4%b8%ad%e6%98%af%e5%90%a6%e9%9c%80%e8%a6%81%e8%81%94%e7%bd%91><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h2><ul>
 <li>流影系统安装部署过程中，依照说明可能需要在线安装相关依赖环境。若连接互联网受限，所需依赖环境可自行下载rpm包进行安装。</li><li>流影系统运行过程，对告警的检测无需联网，可由本地完成计算。生成告警时所匹配的情报特征在本地存放。</li><li>在开源版流影中情报特征数据不支持联网自动更新。目前仅支持通过开源项目的维护，手动更新相关情报配置。情报检测配置文件位于<code>/Agent/data</code>目录下，更新时，从开源项目 ly_analyser 的<code>ti</code>文件夹中获取，包括 sus_threat、ti_dns、mining_domain、mining_ip，覆盖/Agent/data中相应文件。</li><li>使用流影系统时，前端界面涉及到情报查询操作，情报查询需要联网请求自建情报接口，服务地址IP为<code>101.254.236.76</code>、端口<code>16380</code>。此接口仅仅支持威胁情报信息查询拓线，不影响系统威胁检测告警。</li></ul><h2 id=q-威胁情报ioc检测配置文件位置>Q: 威胁情报IOC检测配置文件位置？ <a class=header-link href=#q-%e5%a8%81%e8%83%81%e6%83%85%e6%8a%a5ioc%e6%a3%80%e6%b5%8b%e9%85%8d%e7%bd%ae%e6%96%87%e4%bb%b6%e4%bd%8d%e7%bd%ae><svg class="fill-current o-60 hover-accent-color-light" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76.0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71.0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71.0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76.0 5-2.24 5-5s-2.24-5-5-5z"/></svg></a></h2><ul>
 <li>威胁情报IOC检测配置文件位于<code>/Agent/data</code>目录下，相关情报文件包括 sus_threat、ti_dns、mining_domain、mining_ip，更新时从开源组件ly_analyser的<code>ti</code>目录中获取最新文件直接替换即可。</li></ul></div><h2>See Also</h2><ul>
-<li><a href=/other/development/>ESXi环境流量镜像接入说明</a></li><li><a href=/contribute/development/>代码贡献</a></li><li><a href=/contribute/documentation/>帮助完善项目文档 Docs</a></li><li><a href=/getting-started/deploy-required/>部署环境说明</a></li></ul></div></div><div class="order-0 w-20 dn db-l">
+<li><a href=/other/qalist/>功能列表</a></li><li><a href=/other/development/>ESXi环境流量镜像接入说明</a></li><li><a href=/contribute/development/>代码贡献</a></li><li><a href=/contribute/documentation/>帮助完善项目文档 Docs</a></li><li><a href=/getting-started/deploy-required/>部署环境说明</a></li></ul></div></div><div class="order-0 w-20 dn db-l">
 <nav role=navigation>
 <ul class="list pa0 nl2">
 <li class="f5 w-100 hover-bg-light-gray hover-accent-color-light fw8">
@@ -235,6 +237,10 @@ DEPLOY
 </li><li class="f6 fw4">
 <a href=/other/development/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
 流量镜像接入
+</a>
+</li><li class="f6 fw4">
+<a href=/other/qalist/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 black">
+功能支持说明
 </a>
 </li><li class="f6 fw4">
 <a href=/other/faq/ class="db link hover-bg-gray hover-white pl3 pr2 pv2 primary-color">
