--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -33,6 +33,7 @@
 <meta property="og:url" content="https://abyssalfish-os.github.io/getting-started/"><meta property="og:image" content="https://abyssalfish-os.github.io/opengraph/gohugoio-card-base-1_huf001e7df4fd9c00c4355abac7d4ca455_242906_filter_12879743171649238343.png">
 <meta itemprop=name content="入门">
 <meta itemprop=description content="Quick start and guides for installing Hugo on your preferred operating system.">
+<script>var _hmt=_hmt||[];(function(){var e,t=document.createElement("script");t.src="https://hm.baidu.com/hm.js?20e14b502dcd423ae21f8119455786ab",e=document.getElementsByTagName("script")[0],e.parentNode.insertBefore(t,e)})()</script>
 </head><body class="ma0 sans-serif bg-primary-color-light
 production">
 <nav class="bg-primary-color-dark pv4 w-100" role=navigation>
