--- a/other/index.html
+++ b/other/index.html
@@ -33,6 +33,7 @@
 <meta property="og:url" content="https://abyssalfish-os.github.io/other/"><meta property="og:image" content="https://abyssalfish-os.github.io/opengraph/gohugoio-card-base-1_huf001e7df4fd9c00c4355abac7d4ca455_242906_filter_9595977803342376379.png">
 <meta itemprop=name content="其他文档资料">
 <meta itemprop=description content="流影相关的文档说明性资料">
+<script>var _hmt=_hmt||[];(function(){var e,t=document.createElement("script");t.src="https://hm.baidu.com/hm.js?20e14b502dcd423ae21f8119455786ab",e=document.getElementsByTagName("script")[0],e.parentNode.insertBefore(t,e)})()</script>
 </head><body class="ma0 sans-serif bg-primary-color-light
 production">
 <nav class="bg-primary-color-dark pv4 w-100" role=navigation>
