--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ GitHub
 <h2 class="f3 f1-l fw4 white-90 m0 lh-title pt2 pb3 pv0-ns">
 国内首个开源网络流量可视化分析平台
 </h2><div class="lh-copy f4 w-90-ns center fw2 silver tc tc-ns">
-<p>专注于网络行为分析识别和威胁行为追溯挖掘</p><p>提供轻量级网络行为可视化分析与安全态势感知综合解决方案</p><p>适用于入侵检测、攻防演练、威胁狩猎、网络安全态势感知等应用场景</p><p>看见网络通讯、看清网络行为、看懂网络威胁，守护每一位用户数字化安全发展之路</p></div><div class="w4 mv4 center">
+<p>专注于网络行为挖掘分析和威胁感知</p><p>低成本轻量级网络安全态势感知解决方案</p><p>适用于入侵检测、威胁狩猎、攻防演练、安全监测等场景</p><p>看见流量、看清行为、看懂威胁，守护用户的数字化安全发展</p></div><div class="w4 mv4 center">
 <a class="f5 db link grow tc v-mid bg-blue white ba b--blue ph3 pv2 br1" href=/getting-started/quick-start/>Quick Start</a>
 </div></section></header><main role=main class="content-with-sidebar min-vh-100 pb7 pb0-ns">
 <section class="w-100 ph4 ph5-ns pv4"><div class="w-90-l center">
@@ -105,8 +105,8 @@ GitHub
 <h3 class="lh-title gray o-80 f4 f5-ns mb2 fw8 bmt1 mt0-l">
 高性能
 </h3><div class="db v-mid w-100 gray measure-wide mb5 mb0-l">
-<p class="f3 primary-color mt0 mb2">流量采集吞吐高、丢包少，准实时分析</p><div class=lh-copy>
-流量采集单节点支持高达10Gbps；用户界面秒级响应
+<p class="f3 primary-color mt0 mb2">吞吐高、丢包少，网络流量准实时分析</p><div class=lh-copy>
+单节点探针支持高达10Gbps；用户界面秒级响应
 </div></div></div></div></div><div class="w-100 w-50-ns ph5-l pv5-l nested-copy-line-height">
 <div class="flex-l flex-wrap justify-between">
 <div class="flex-auto w-100 w-20-ns pt1">
@@ -116,7 +116,7 @@ GitHub
 可视化
 </h3><div class="db v-mid w-100 gray measure-wide mb5 mb0-l">
 <p class="f3 primary-color mt0 mb2">网络数据和行为特征可视化呈现，支持交互式分析</p><div class=lh-copy>
-界面简洁易用，融合数据可视化、交互式分析技术，增强用户对安全数据的理解，帮助用户从海量网络数据发现重要线索
+融合可视化、交互式分析技术，从海量网络数据中发现线索，洞察威胁行为
 </div></div></div></div></div><div class="w-100 w-50-ns ph5-l pv5-l nested-copy-line-height">
 <div class="flex-l flex-wrap justify-between">
 <div class="flex-auto w-100 w-20-ns pt1">
@@ -125,8 +125,8 @@ GitHub
 <h3 class="lh-title gray o-80 f4 f5-ns mb2 fw8 bmt1 mt0-l">
 可解释
 </h3><div class="db v-mid w-100 gray measure-wide mb5 mb0-l">
-<p class="f3 primary-color mt0 mb2">高价值网络行为痕迹特征留存及展现</p><div class=lh-copy>
-流量分析引擎自动挖掘记录网络行为关键特征，保存异常通讯特征，为网络行为分析提供解释依据
+<p class="f3 primary-color mt0 mb2">高价值网络行为痕迹留存、特征提取及展现</p><div class=lh-copy>
+自动挖掘记录网络行为关键特征，保存异常通讯特征，为网络行为分析提供证据
 </div></div></div></div></div><div class="w-100 w-50-ns ph5-l pv5-l nested-copy-line-height">
 <div class="flex-l flex-wrap justify-between">
 <div class="flex-auto w-100 w-20-ns pt1">
@@ -135,22 +135,22 @@ GitHub
 <h3 class="lh-title gray o-80 f4 f5-ns mb2 fw8 bmt1 mt0-l">
 告警精准
 </h3><div class="db v-mid w-100 gray measure-wide mb5 mb0-l">
-<p class="f3 primary-color mt0 mb2">安全告警多维关联聚合，减少误报干扰</p><div class=lh-copy>
-安全威胁行为经过特征模型、情报关联、白名单过滤后按时间窗口关联聚合，产出精准告警，避免告警风暴
+<p class="f3 primary-color mt0 mb2">集成多种成熟模型，安全告警多维关联聚合，减少误报干扰</p><div class=lh-copy>
+经过特征模型、情报关联、白名单过滤处理，告警事件按时间窗口关联聚合，推送精准告警，避免告警风暴
 </div></div></div></div></div></div></div></section><section class="w-100 ph4 ph5-ns pv4 pv6-ns mid-gray bg-accent-color blue">
 <div class="flex-ns flex-wrap center mw9">
 <div class="w-100 w-50-l order-0">
 <div class="w-90-ns center">
 <a href=http://101.254.236.75:14180/ui/ class="link black dim">
-<img src=/img/login.png alt="image depicting an example of 马上体验" class="img shadow-5">
+<img src=/img/login.png alt="image depicting an example of 体验一下" class="img shadow-5">
 </a>
 </div></div><div class="w-100 w-50-l">
 <div class="w-80-ns center tc">
-<h3 class="f1 fw4 black ma0 pt4 lh-title pt0-l">马上体验</h3><p class="f3 lh-copy">
-这里提供了流影在线演示环境，便于您快速上手操作使用，能够马上体验流影各种功能。登录账号demo，密码demo@2022
+<h3 class="f1 fw4 black ma0 pt4 lh-title pt0-l">体验一下</h3><p class="f3 lh-copy">
+这是流影在线演示环境，便于您快速上手操作使用，能够马上体验流影各种功能。请使用账号demo，密码demo@2022。
 </p><p class="f4 lh-copy nested-linksTK">
 <a href=http://101.254.236.75:14180/ui/ class="link black dim">
-点击进入演示 Demo<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="14" viewBox="0 0 32 32" class="fill-current v-base" aria-label="External Link"><path d="M25.152 16.576v5.696q0 2.144-1.504 3.648T20 27.424H5.152q-2.144.0-3.648-1.504t-1.504-3.648V7.424q0-2.112 1.504-3.616t3.648-1.536h12.576q.224.0.384.16t.16.416V4q0 .256-.16.416t-.384.16H5.152q-1.184.0-2.016.832t-.864 2.016v14.848q0 1.184.864 2.016t2.016.864H20q1.184.0 2.016-.864t.832-2.016v-5.696q0-.256.16-.416t.416-.16h1.152q.256.0.416.16t.16.416zM32 1.152v9.12q0 .48-.352.8t-.8.352-.8-.352l-3.136-3.136-11.648 11.648q-.16.192-.416.192t-.384-.192l-2.048-2.048q-.192-.16-.192-.384t.192-.416L24.064 5.088l-3.136-3.136q-.352-.352-.352-.8t.352-.8.8-.352h9.12q.48.0.8.352t.352.8z"/></svg>
+点击这里进入演示 Demo<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="14" viewBox="0 0 32 32" class="fill-current v-base" aria-label="External Link"><path d="M25.152 16.576v5.696q0 2.144-1.504 3.648T20 27.424H5.152q-2.144.0-3.648-1.504t-1.504-3.648V7.424q0-2.112 1.504-3.616t3.648-1.536h12.576q.224.0.384.16t.16.416V4q0 .256-.16.416t-.384.16H5.152q-1.184.0-2.016.832t-.864 2.016v14.848q0 1.184.864 2.016t2.016.864H20q1.184.0 2.016-.864t.832-2.016v-5.696q0-.256.16-.416t.416-.16h1.152q.256.0.416.16t.16.416zM32 1.152v9.12q0 .48-.352.8t-.8.352-.8-.352l-3.136-3.136-11.648 11.648q-.16.192-.416.192t-.384-.192l-2.048-2.048q-.192-.16-.192-.384t.192-.416L24.064 5.088l-3.136-3.136q-.352-.352-.352-.8t.352-.8.8-.352h9.12q.48.0.8.352t.352.8z"/></svg>
 </a>
 </p></div></div></div></section><section class="w-100 ph4 ph5-ns pt4 pb5 mid-gray bg-primary-color-light bb bt b--light-gray"><div class="w-100 center pt5">
 <div class="w-100 w-40-l tc center">
