deploy: aadf86d22c857db237d7efcb568dbe70482a179d

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ GitHub
 <h2 class="f3 f1-l fw4 white-90 m0 lh-title pt2 pb3 pv0-ns">
 国内首个开源网络流量可视化分析平台
 </h2><div class="lh-copy f4 w-90-ns center fw2 silver tc tc-ns">
-<p>专注于网络行为挖掘分析和威胁感知，洞悉流量、洞察行为、洞见威胁</p><p>低成本轻量级网络安全感知解决方案，一键部署、维护简单、使用轻松</p><p>广泛适用于企业数字安全防护各场景，不限于攻防演练、威胁狩猎、安全监测&mldr;</p></div><div class="w4 mv4 center">
+<p>专注于网络行为挖掘分析和威胁感知，洞悉流量、洞察行为、洞见威胁</p><p>低成本轻量级网络安全感知解决方案，一键部署、维护简单、使用轻松</p><p>广泛适用于各行业数字安全防护场景，安全监测、威胁狩猎、攻防演练&mldr;</p></div><div class="w4 mv4 center">
 <a class="f5 db link grow tc v-mid bg-blue white ba b--blue ph3 pv2 br1" href=/getting-started/quick-start/>Quick Start</a>
 </div></section></header><main role=main class="content-with-sidebar min-vh-100 pb7 pb0-ns">
 <section class="w-100 ph4 ph5-ns pv4"><div class="w-90-l center">
