--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ GitHub
 <input type=text id=search-input class="needs-js dn bn f5 lh-solid mt3 mt0-ns pl4 pv2 w5 white" placeholder="Welcome to FlowShadow" name=search-input style=background-color:rgba(255,255,255,0)>
 </fieldset></form></div></div></nav><header class="bg-primary-color ph4 tc" role=banner>
 <section class="center pb4 pb5-l ph4-l pt3 pt5-ns w-90 w-60-l">
-<div class="center w-140 w-60-ns">
+<div class="center w-100 w-80-ns">
 <img src=/img/main2.png alt=流影>
 </div><h2 class="f3 f1-l fw4 white-90 m0 lh-title pt2 pb3 pv0-ns">
 国内首个开源网络流量可视化分析和威胁感知平台
@@ -183,10 +183,9 @@ Improve the Modules<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://w
 <div class="center flex-ns flex-wrap justify-between mw9 w-90">
 <div class="center pb3 pt4">
 <div class="b f3 light-gray mb3 nested-links tc">
-流影由 <a href=https://github.com/orgs/Abyssal-Fish-Technology class=link>深海鱼（北京）科技有限公司 </a>发起开源和维护，欢迎参与<br>
-</div><div class="center w4">
-<img src=/images/wx_public.jpg alt=关注微信公众号 width=100 height=100>
+流影由 <a href=https://github.com/orgs/Abyssal-Fish-Technology class=link>深海鱼（北京）科技有限公司 </a>发起开源和维护，欢迎参与和使用反馈<br>
 </div><ul class="center f6 list ma0 mv4 pa0 tc">
+<li class="dib mr3"><img src=/images/wx_public.jpg alt=关注微信公众号 width=100 height=100> </li><li class="dib mr3 white"> 公众号 </li><li class="dib mr3 white"> 沟通群 </li><li class="dib mr3"><img src=/images/wx_group.png alt=微信群 width=100 height=100></li></ul><ul class="center f6 list ma0 mv4 pa0 tc">
 <li class="dib mr3"><a href=https://github.com/Abyssal-Fish-Technology/ly_vis class="dim link light-gray pv2">可视化交互分析(ly_vis)</a></li><li class="dib mr3"><a href=https://github.com/Abyssal-Fish-Technology/ly_server class="dim link light-gray pv2">管理引擎(ly_server)</a></li><li class=dib><a href=https://github.com/Abyssal-Fish-Technology/ly_analyser class="dim link light-gray pv2">分析引擎(ly_analyser)</a></li><li class=dib><a href=https://github.com/Abyssal-Fish-Technology/ly_probe class="dim link light-gray pv2"> &nbsp;&nbsp;&nbsp;&nbsp;流量探针(ly_probe)</a></li></ul><ul class="center f6 list ma0 mv3 pa0 tc"><li class="dib mr3"><a href=https://github.com/abyssalfish-os/liuying/issues/new class="dim link light-gray pv2">到 Github 发起 Issue</a></li><li class=dib><a href=https://gitter.im/abyssalfish-os/community class="dim link light-gray pv2">来 Gitter 沟通留言</a></li></ul></div></div><div class="bg-primary-color-dark bottom-0 left-0 right-0 dn-l fixed pb3 ph3 pt3 z-2"><div class="globalmenu mobilemenu pb1 dn">
 <ul class="list hidden dib ph0 scrolling-touch tc">
 <li class="tl dib ma0 hover-bg-black w-100">
